Implementar la limitación de intentos de inicio de sesión y cierre de sesión JWT
Se agregó compatibilidad con el backend para el cierre de sesión JWT mediante la inclusión de tokens en la lista negra y se introdujo un limitador de intentos de inicio de sesión para bloquear a los usuarios tras varios intentos fallidos. Se actualizaron AuthController, JWTAuthenticationFilter y SecurityConfig para integrar estas funciones. Se modificó el frontend para añadir un botón de cierre de sesión y la lógica de servicio correspondiente. También se mejoró la configuración de CORS y se configuraron los ajustes de JWT y CORS mediante variables de entorno.